--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
-  "name": "vite_react_shadcn_ts",
-  "private": true,
-  "version": "0.0.0",
+  "name": "github-friendly-blog",
+  "version": "1.0.0",
   "type": "module",
-  "homepage": "git@github.com:harish9899100/github-friendly-blog.git",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
